<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">keluApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_chinese">餐缘系统</string>
    <string name="str_login">登录</string>
    <string name="str_select_table">选桌</string>
    <string name="str_select_dishs">点菜</string>
    <string name="str_availiable">空闲中</string>
    <string name="str_cleaning">清洁中</string>
    <string name="str_enjoying">享用中</string>
    <string name="str_selected_table_info">已选中0号餐桌</string>
    <string name="str_selected_dishes_info">已点选0道餐点</string>
    <string name="str_total">共计:￥0.0</string>
    <string name="str_received">实收:￥</string>
    <string name="str_change">找零:￥0.0</string>
    <string name="str_price">单价:￥0.0</string>
    <string name="str_count">0份</string>
    <string name="str_order_detail">订单详情</string>
    <string name="str_tips">提示</string>
    <string name="str_no_table">请选择餐桌桌号!</string>
    <string name="str_no_dishes">请选择餐点!</string>
    <string name="str_make_decision">确定是她了!</string>
    <string name="str_will_paid">需要结账!</string>
    <string name="str_charge_over">结账成功,是否退出!</string>
    <string name="str_confirm">确定</string>
	<string name="str_cancel">取消</string>
	<string name="str_close">关闭</string>
	<string name="str_save_success">保存成功</string>
	<string name="str_save_failure">保存失败</string>
	<string name="str_update_success">更新成功</string>
	<string name="str_update_failed">更新失败</string>
	<string name="str_unpaid">未付款</string>
	<string name="str_charged">已付款</string>
	<string name="str_paid_over">结算</string>
	<string name="str_zero">0</string>
	<string name="str_dish_name">菜名</string>
    <string-array name="str_dishes">
        <item >宫保鸡丁</item>
        <item >鱼香茄子</item>
        <item >麻婆豆腐</item>
        <item >鱼香肉丝</item>
        <item >巫山烤鱼</item>
        <item >手撕包菜</item>
        <item >地三鲜</item>
        <item >酸菜鱼</item>
        <item >水煮鱼</item>
        <item >武昌鱼</item>
        <item >过油肉</item>
        <item >沙棘苹果</item>
        <item >香菇油菜</item>
    </string-array>
    <string-array name="str_dishes_pin">
        <item >gongbaojiding.png</item>
        <item >yuxiangqiezi.jpg</item>
        <item >mapodoufu.jpg</item>
        <item >yuxiangrousi.jpg</item>
        <item >wushankaoyu.jpg</item>
        <item >shousibaocai.jpg</item>
        <item >disanxian.jpg</item>
        <item >suancaiyu.jpg</item>
        <item >shuizhuyu.jpg</item>
        <item >wuchangyu.jpg</item>
        <item >guoyourou.jpg</item>
        <item >shajipingguo.jpg</item>
        <item >xiangguyoucai.jpg</item>
    </string-array>
	<string-array name="str_dishtypes">
	    <item >川菜</item>
	    <item >鲁菜</item>
	    <item >粤菜</item>
	    <item >徽菜</item>
	    <item >湘菜</item>
	    <item >浙菜</item>
	    <item >闽菜</item>
	    <item >荤菜</item>
	    <item >素菜</item>
	</string-array>
	
	<string name="str_no_user">用户名不存在!</string>
	<string name="str_pw_unmatch">用户名密码不匹配!</string>
	<string name="str_success">登录成功!</string>
	<string name="str_pw_null">密码不能为空!</string>
	<string name="str_name_null">用户名不能为空!</string>
	<string name="str_logout">注销中!</string>
</resources>
