<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:padding="@dimen/n10dp"
    >
    <ImageView 
        android:id="@+id/tv_dish_Pic"
        android:layout_width="@dimen/n80dp"
        android:layout_height="@dimen/n80dp"
        android:background="@color/col_white"
        android:src="@drawable/img_loaded_failure"

        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
		android:padding="@dimen/n10dp"
        >
        <TextView 
            android:id="@+id/tv_dish_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_dish_name"
            android:textSize="@dimen/n18sp"
            android:textColor="@color/col_dark_gray"
            />
        <TextView 
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_price"
            android:textSize="@dimen/n18sp"
            android:textColor="@color/col_dark_gray"
            />
        <TextView 
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_count"
            android:textSize="@dimen/n16sp"
            android:textColor="@color/col_dark_gray"
			android:maxLines="2"
			android:ellipsize="end"  
            />
    </LinearLayout>
	
</LinearLayout>
